# askmy-codebase

./: .claudeignore  .gitignore  Dockerfile  README.md  SPEC.md  bm25.py  context.md  pyproject.toml  render.yaml  requirements.txt  setup.py
.github/workflows/: publish.yml
src/: api.py  ast_parser.py  claude_md_generator.py  context_builder.py  embedder.py  github_loader.py  ingestion.py  main.py  pr_reviewer.py  retriever.py
tests/: test_api.py  test_ast_parser.py  test_claude_md_generator.py  test_embedder.py  test_github_loader.py  test_ingestion.py  test_main.py  test_pr_reviewer.py  test_retriever.py
